--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -171,7 +171,7 @@ import './js/survey.js';
 // Robot tag to identify which version of the robot (sad/happy) this session is using
 // Change this to "happy" for the control group branch
 // This should match the ROBOT_TAG in survey.js
-const ROBOT_TAG = 'sad';
+const ROBOT_TAG = 'happy';
 
 // Helper function to reset survey (for testing)
 // Usage in console: resetSurvey()
