change page title

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Video Crossfade with Slider (4 clips)</title>
+<title>Chat Bot Interaction</title>
 <link rel="stylesheet" href="css/survey.css">
 <style>
   html, body {
