just testing the deployment pipeline

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -18,7 +18,8 @@
     top: 0;
     width: 100vw;
     height: calc(100vh - 88px); /* leave room for controls */
-    background: black;
+    /* background: black; */
+    background: red;
     z-index: 0;
     pointer-events: none;
   }
