--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -721,14 +721,14 @@ document.addEventListener("mozfullscreenchange", updateFullscreenButton);
 
 // End Interaction button - triggers post-study survey
 const endInteractionBtn = $("#endInteractionBtn");
-endInteractionBtn.onclick = () => {
+endInteractionBtn.onclick = async () => {
   // Confirm before ending interaction
   if (confirm('Are you sure you want to end the interaction? You will be asked to complete a post-study survey.')) {
     // End voice conversation if active
     if (window.endVoiceConversation) {
-      window.endVoiceConversation();
+      await window.endVoiceConversation();
     }
-    
+
     // Start post-survey
     if (window.startPostSurvey) {
       window.startPostSurvey();
