--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -18,8 +18,7 @@
     top: 0;
     width: 100vw;
     height: calc(100vh - 88px); /* leave room for controls */
-    /* background: black; */
-    background: red;
+    background: black;
     z-index: 0;
     pointer-events: none;
   }
