--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -49,7 +49,7 @@ window.initializeInstructions = initializeInstructions;
 // Robot tag to identify which version of the robot (sad/happy) this session is using
 // Change this to "happy" for the control group branch
 // This should match the ROBOT_TAG in survey.js
-const ROBOT_TAG = 'sad';
+const ROBOT_TAG = 'happy';
 
 // Make sure all videos are preloaded for when they're needed.
 preloadAllVideos();
