be more defensive about sending affect score

--- a/videofade-test/index.html
+++ b/videofade-test/index.html
@@ -404,13 +404,18 @@ endInteractionBtn.onclick = async () => {
 
     // Submit final affect score to backend
     if (window.emotionAnalyzer) {
-      const finalAffect = window.emotionAnalyzer.currentAffect;
-      const sessionId = localStorage.getItem('userSessionId');
-      await fetch('/api/submit-affect', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ sessionId, finalAffect, timestamp: new Date().toISOString() })
-      });
+      try {
+        const finalAffect = window.emotionAnalyzer.currentAffect;
+        const sessionId = localStorage.getItem('userSessionId');
+        await fetch('/api/submit-affect', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ sessionId, finalAffect, timestamp: new Date().toISOString() })
+        });
+      } catch (err) {
+        console.error('Failed to submit final affect score:', err);
+        // Continue to post-survey regardless
+      }
     }
 
     // Start post-survey
